# ccal

./: .coverage  .gitignore  README-zh_cn.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: publish.yml  release-binary.yml  release.yml
docs/: README.md  building.en.md  building.md  commands.en.md  commands.md  install.en.md  install.md
scripts/: build_release.py  pyinstaller_tesseract_hook.py
src/: config.py  event_workflow.py  google_setup.py  main.py  update.py
src/connections/: apple_calendar.py  google_calendar.py  ics.py
src/input/: geo.py  ocr.py  tesseract_runtime.py
src/models/: llm.py  model.py
tests/: conftest.py  test_apple_calendar.py  test_build_release.py  test_config.py  test_geo.py  test_google_calendar.py  test_ics.py  test_llm.py  test_main.py  test_model.py  test_ocr.py  test_tesseract_runtime.py  test_update.py
